--- a/report/_quarto.yml
+++ b/report/_quarto.yml
@@ -6,6 +6,8 @@ book:
   title : "Report - DataBase Project - IFEBY140"
   chapters:
     - index.qmd
+    - analysis.qmd
+    - modelization.qmd
 
 format:
   html:
@@ -16,3 +18,8 @@ format:
     theme: cosmo
     title: "Report_DataBase_Project_IFEBY270"
     toc: true
+    geometry:
+      - top=25.4mm
+      - left=25.4mm
+      - right=25.4mm
+      - bottom=25.4mm
